# gpt-app

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
app/: main.py  routes.py
app/api/: logic.py
app/schemas/: models.py
tests/: test_logic.py
